--- a/angular.json
+++ b/angular.json
@@ -36,8 +36,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "5mb",
-                  "maximumError": "6mb"
+                  "maximumWarning": "30kb",
+                  "maximumError": "30mb"
                 },
                 {
                   "type": "anyComponentStyle",
