--- a/package.json
+++ b/package.json
@@ -36,11 +36,10 @@
     "rxjs": "~7.5.0",
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "@angular-devkit/build-angular": "^14.1.1"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-
+    "@angular-devkit/build-angular": "^14.1.1",
     "@angular/cli": "~14.1.1",
     "@angular/compiler-cli": "^14.1.0",
     "@types/jasmine": "~4.0.0",
